// Copyright 2022 The Tari Project
// SPDX-License-Identifier: BSD-3-Clause


syntax = "proto3";
package tari.dan.tips.tip003;

// Empty TIP for sidechains using base layer checkpoints
service Tip003 {
  rpc Init(InitRequest) returns (Empty);
}

message InitRequest {

}

message Empty {

}
