syntax = "proto3";

service Tip001 {
  rpc ReadMetada(ReadMetadataRequest) returns ReadMetadataResponse;
}

message ReadMetadataRequest {

}

message ReadMetadataResponse {

}